cif/org.eclipse.escet.cif.tests/tests/datasynth/invalid4.cif.err
ERROR: Data-based supervisory controller synthesis failed due to unsatisfied preconditions:

  ---------------------------------
  (1/1) Division by zero for "div".
  ---------------------------------
   * In discrete variable "p.v2":
     - disc int[0..5] v2 = 5 div v1;
                                 ^
